--- a/sales_data_dashboard/pubspec.yaml
+++ b/sales_data_dashboard/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   mobx: ^2.5.0
   get_it: ^8.0.3
   flutter_mobx: ^2.3.0
+  firebase_core: ^3.14.0
 
 dev_dependencies:
   flutter_test:
