--- a/sales_data_dashboard/pubspec.yaml
+++ b/sales_data_dashboard/pubspec.yaml
@@ -41,6 +41,13 @@ dependencies:
   get_it: ^8.0.3
   flutter_mobx: ^2.3.0
   firebase_core: ^3.14.0
+  sqflite: ^2.4.1
+  excel: ^2.0.4
+  pdf: ^3.10.4
+  printing: ^5.11.0
+  file_saver: 0.2.14
+  path_provider: ^2.1.2
+  permission_handler: ^11.3.0
 
 dev_dependencies:
   flutter_test:
@@ -68,6 +75,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - assets/icons/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
