--- a/sales_data_dashboard/pubspec.yaml
+++ b/sales_data_dashboard/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   get_it: ^8.0.3
   flutter_mobx: ^2.3.0
   firebase_core: ^3.14.0
+  cloud_firestore: ^5.6.9
 
 dev_dependencies:
   flutter_test:
