--- a/sales_data_dashboard/pubspec.yaml
+++ b/sales_data_dashboard/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_mobx: ^2.3.0
   firebase_core: ^3.14.0
   cloud_firestore: ^5.6.9
+  printing: ^5.14.2
 
 dev_dependencies:
   flutter_test:
